Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <ul>
 <li>Game dev</li>
-<li>Deep reinforcement learning</li>
+<li>Deep learning</li>
 </ul>
 
       <footer class="site-footer">
